--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.CAMERA" />
 
@@ -16,16 +16,20 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.IndexEye"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
-            android:name=".PlumberActivity"
+            android:name=".activities.ListeFuite"
+            android:parentActivityName=".activities.PlumberProfile"
+            android:exported="false" />
+        <activity
+            android:name=".activities.PlumberProfile"
             android:exported="false" />
         <activity
             android:name=".activities.HomeScreen"
             android:exported="false" />
         <activity
             android:name=".activities.FirstActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
